@@ -2,9 +2,10 @@
 2007-XX-XX:
 	* version 0.5.2
 	* added 'visualbellstyle' for styling/hiding the visual bell
-  	* :buffer partial_string works now as in vim, and with ! even better
 	* merge the existing status bar with the standard FF status bar so that
 	  security information and extension buttons are included
+  	* :buffer partial_string works now as in vim, and with ! even better
+	* new :time command for profiling
 	* added new :sidebar and :sbclose commands
 	* added 'more' and standard more-prompt key mappings to control
 	  behaviour of the message list pager 
@@ -12,7 +13,9 @@
 	  highlighted text strings when 'hlsearch' is set
 	* added 'linksearch' option to restrict page searches to link text - \U
 	  and \u can be used in the search pattern to override 'linksearch'
+	* vimperator trys to stay in command mode after loading pages instead of having a text field focused
 	* added a visual bell and replaced 'beep' with 'visualbell'
+	* added vimperator logo (can be seen in the addons manager)
 	* added 'hlsearch','incsearch', 'ignorecase' and 'smartcase' options
 
 2007-09-03:
